--- a/index.html
+++ b/index.html
@@ -3,19 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>/ adidiborg on internet</title>
+    <title>Aditya Borgaonkar</title>
     <link rel="stylesheet" href="main.css" />
     <script
       src="https://kit.fontawesome.com/1b02880067.js"
       crossorigin="anonymous"
     ></script>
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div class="branding"></div>
     <div class="name center">Aditya <span>borgaonkAr</span></div>
-    <div class="image center">
-      <img src="black.png" alt="aditya" />
-    </div>
     <div class="links center">
       <div class="pseudo">
         <a href="https://www.instagram.com/adidiborg/" target="blank"
@@ -45,23 +59,23 @@
           ><i class="fab fa-steam"></i
         ></a>
       </div>
-      <br><br>
-      <a href="https://adidiborg.live/docs/" class="center" style="font-family: monospace;text-decoration:none;font-size: 1rem; " target="_blank">adidiborg Docs</a>
-      <br>
+      
+    </div>
+    <div class="image center">
+      <img src="adidi.png" alt="aditya" />
     </div>
     <div class="center">
       <div class="about">
-        <span>adidiborg</span> is Aditya's internet alias and he is from India.
+        <span>Me in 15 seconds</span>
         <br />
         <br />
-        Propelling towards more efficiency and variety in life <span>everday</span>.
+        I'm an engineer, currently solving cloud infrastructure observability problems at Qualys.
         <br />
         <br />
-        <span>Currently</span> he is solving Cloud Infrastructure Monitoring problems as Systems Engineer at Qualys. 
+        Loves doing cat photography, keeping things organized, finding symmetry in asymmetric environments, first person shooters, esports and dark theme. always.
         <br />
         <br />
-        <span>Adidi</span> posts regularly on <a href="https://www.instagram.com/adidiborg/" target="blank"
-          ><span></span>Instagram</a> with art, cats and photography(mostly cats).
+        From and currently in India.
         <br />
         <br />
       </div>
