--- a/index.html
+++ b/index.html
@@ -66,18 +66,25 @@
     </div>
     <div class="center">
       <div class="about">
-        <span>Me in 15 seconds</span>
+        <span>Me in 25 seconds</span>
         <br />
         <br />
-        I'm an engineer, currently solving cloud infrastructure observability problems at Qualys.
+        I'm an engineer, currently solving cloud infrastructure observability problems at Qualys. Competent in Python / Go / Shell / YAML / SQL queries.
         <br />
         <br />
-        Loves doing cat photography, keeping things organized, finding symmetry in asymmetric environments, first person shooters, esports and dark theme. always.
+        Loves doing cat photography, Have an endless capacity for improving upon anything that takes my interest. Do keep things organized, Love finding symmetry in asymmetric environments.
+        <br />
+        <br />        
+        First person shooters. esports.
+        <br />
+        <br />
+        dark theme. always.
         <br />
         <br />
         From and currently in India.
         <br />
         <br />
+        <small>for emails, <a href="mailto:borg.aditya@gmail.com" style="color: #77e1cd;text-decoration: none;">borg.aditya@gmail.com</a> </small> 
       </div>
     </div>
   </body>
