--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       
     </div>
     <div class="image center">
-      <img src="adidi.png" alt="aditya" />
+      <img src="adidiborg-min.png" alt="aditya" />
     </div>
     <div class="center">
       <div class="about">
@@ -81,7 +81,7 @@
         dark theme. always.
         <br />
         <br />
-        From and currently in India.
+        From Aurangabad, India and currently in Pune, India.
         <br />
         <br />
         <small>for emails, <a href="mailto:borg.aditya@gmail.com" style="color: #77e1cd;text-decoration: none;">borg.aditya@gmail.com</a> </small> 
