took some ai help for about section

--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
     </div>
     <div class="center">
       <div class="about">
-        <span>Me in 25 seconds</span>
+        <span>Programmer / DIY enthusiast</span>
         <br />
         <br />
-        I'm an engineer, currently solving cloud infrastructure observability problems at Qualys. Competent in Python / Go / Shell / YAML / SQL queries.
+        He's an engineer, currently building a centralized cloud observability at Qualys. Proficient in Python / Golang / Shell, and SQL queries.
         <br />
         <br />
-        Loves doing cat photography, Have an endless capacity for improving upon anything that takes my interest. Do keep things organized, Love finding symmetry in asymmetric environments.
+        Beyond coding, he finds joy in capturing feline moments through photography. His appetite for improvement is insatiable, especially when it comes to pursuits that pique his interest. He takes pride in maintaining order and revels in discovering symmetry in seemingly asymmetrical environments.
         <br />
         <br />        
-        First person shooters. esports.
+        Embarking on the digital landscape, you'll find him as <span style="color: #77e1cd">adidiborg</span>, his chosen cipher in the virtual world.
         <br />
         <br />
-        dark theme. always.
+        The allure of a dark theme is a constant in his digital realm.
         <br />
         <br />
         From Aurangabad, India and currently in Pune, India.
