--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <span>Programmer / DIY enthusiast</span>
         <br />
         <br />
-        He's an engineer, currently building a centralized cloud observability at Qualys. Proficient in Python / Golang / Shell, and SQL queries.
+        He's an engineer, currently building a centralized cloud observability at Qualys. Proficient in Python / Golang / Shell and SQL queries.
         <br />
         <br />
         Beyond coding, he finds joy in capturing feline moments through photography. His appetite for improvement is insatiable, especially when it comes to pursuits that pique his interest. He takes pride in maintaining order and revels in discovering symmetry in seemingly asymmetrical environments.
